--- a/index.html
+++ b/index.html
@@ -4,7 +4,34 @@
     <title>Hello, World!</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
+<style>
+
+
+</style>
   <body>
       <h1 class="title">Hello World! </h1>
+      <section class="card-slider">
+        <div class="card">
+          <h3>The card heading.</h3>
+          <img src="img/avatar.jpeg" alt="card img"/>
+          <p>This is an element</p>
+        </div>
+        <div class="card">
+          <h3>The card heading.</h3>
+          <img src="img/avatar.jpeg" alt="card img"/>
+          <p>This is an element</p>
+        </div>
+        <div class="card">
+          <h3>The card heading.</h3>
+          <img src="img/avatar.jpeg" alt="card img"/>
+          <p>This is an element</p>
+        </div>
+        <div class="card">
+          <h3>The card heading.</h3>
+          <img src="img/avatar.jpeg" alt="card img"/>
+          <p>This is an element</p>
+        </div>
+
+      </section>
   </body>
 </html>
